--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Lato");
+
 * {
   margin: 0px;
   padding: 0px;
@@ -27,8 +29,7 @@
 }
 
 .reg-form {
-  width: 34%;
-  max-width: 502px;
+  width: 502px;
 }
 
 .form-title {
@@ -56,15 +57,16 @@
   margin: 0px 25px;
 }
 
-.form-text-input,
+.form-text-input-container,
 .form-dropdown-input {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-bottom: 16px;
 }
 
-form label {
+.form-label {
   margin-bottom: 10px;
   width: 100%;
   font-weight: 700;
@@ -73,22 +75,14 @@ form label {
   letter-spacing: 0.15px;
 }
 
-form input,
-select {
-  margin-bottom: 16px;
+.form-text-input,
+.form-select-container {
   width: 100%;
   height: 50px;
+  padding: 7px 16px;
   border-radius: 4px;
   border: 1px solid #a5b6cd;
 }
-
-/* form input {
-  padding: 11.5px 14.5px;
-}
-
-form select {
-  padding: 11.5px 16px;
-} */
 
 .form-button-container {
   width: 100%;
@@ -131,4 +125,22 @@ form select {
   line-height: 20px;
   letter-spacing: 0.2px;
   cursor: pointer;
+}
+
+span {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 16px;
+  letter-spacing: 2%;
+  color: #da1e28;
+}
+
+.form-text-input-container > span {
+  width: 100%;
+  margin-top: 5px;
+  display: none;
+}
+
+input:invalid ~ .form-text-input-container > span {
+  display: block;
 }
