--- a/src/App.css
+++ b/src/App.css
@@ -139,3 +139,10 @@ span {
   width: 100%;
   margin-top: 6px;
 }
+
+.alert-container {
+  position: fixed;
+  z-index: 1;
+  margin: 148px 80px;
+  display: block;
+}
