--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@
 
 .app {
   display: flex;
-  /* align-items: center; */
   justify-content: center;
   height: 100vh;
 }
@@ -91,15 +90,11 @@
   justify-content: center;
 }
 
-.submit-button {
+.submit-button,
+.cancel-button {
   width: 145px;
   height: 46px;
-  padding: 11px 34px;
-  margin: 0px 0px 102px 7.5px;
-  border: none;
   align-self: flex-end;
-  background-color: #127c95;
-  color: white;
   border-radius: 6px;
   gap: 10px;
   font-weight: 700;
@@ -109,22 +104,20 @@
   cursor: pointer;
 }
 
+.submit-button {
+  padding: 11px 34px;
+  margin: 0px 0px 102px 7.5px;
+  border: none;
+  background-color: #127c95;
+  color: white;
+}
+
 .cancel-button {
-  width: 145px;
-  height: 46px;
   padding: 10px 32px;
   margin: 0px 7.5px 102px 0px;
   border: 1px solid #4790a1;
-  align-self: flex-end;
   background-color: white;
   color: #4790a1;
-  border-radius: 6px;
-  gap: 10px;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 20px;
-  letter-spacing: 0.2px;
-  cursor: pointer;
 }
 
 span {
@@ -142,7 +135,84 @@ span {
 
 .alert-container {
   position: fixed;
+  top: 148px;
+  right: 80px;
   z-index: 1;
-  margin: 148px 80px;
-  display: block;
+}
+
+.alert-container-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.25%;
+}
+
+@media only screen and (max-width: 600px) {
+  .header {
+    height: 49px;
+  }
+
+  .header-logo-img {
+    height: 16px;
+    width: 148px;
+    margin: 16px 0px 0px 17px;
+  }
+
+  .reg-form {
+    width: 100%;
+  }
+
+  .form-title {
+    line-height: 24px;
+    margin-left: 26px;
+  }
+
+  .form-input-container {
+    border-radius: 0px;
+    padding: 25px;
+  }
+
+  .form-button-container {
+    width: 100vw;
+    display: flex;
+    background-color: whitesmoke;
+    flex-direction: column;
+  }
+
+  .submit-button,
+  .cancel-button {
+    width: 88%;
+    height: 46px;
+    align-self: flex-start;
+    border-radius: 6px;
+    gap: 12px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+    letter-spacing: 0.2px;
+    cursor: pointer;
+  }
+
+  .submit-button {
+    padding: 11px 34px;
+    margin: 0px 25px 90px 25px;
+    border: none;
+    background-color: #127c95;
+    color: white;
+  }
+
+  .cancel-button {
+    margin: 20px 25px 12px 25px;
+    border: 1px solid #4790a1;
+    background-color: white;
+    color: #4790a1;
+  }
+
+  .alert-container {
+    position: absolute;
+    top: 800px;
+    right: 10px;
+    left: 0px;
+    z-index: 1;
+  }
 }
